--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Flask==2.2.5
-gunicorn==20.1.0
+Flask==3.0.2
+Flask-Cors==4.0.0
+python-dotenv==1.0.1
 requests==2.31.0
-python-dotenv==1.0.0
-flask-cors
+beautifulsoup4==4.12.3
+firebase-admin==6.5.0
+gunicorn==21.2.0
